@@ -59,7 +59,7 @@ SVN_ROOT = svn://svn.code.sf.net/p/sdcc/code
 #  REGTESTTARGETS_2_0: These will be tested on even days
 #  REGTESTTARGETS_2_1: These will be tested on odd days
 REGTESTTARGETS_1_0 = test-ds390
-REGTESTTARGETS_2_0 = test-mcs51-medium test-mcs51-large test-mcs51-stack-auto test-hc08 test-ucz80 test-ucgbz80 test-ez80-z80 test-ucr2ka test-stm8-large test-pdk14 test-pdk15-stack-auto
+REGTESTTARGETS_2_0 = test-mcs51-medium test-mcs51-large test-mcs51-stack-auto test-hc08 test-ucz80 test-ucgbz80 test-ez80-z80 test-ucr2ka test-stm8-large test-pdk14 test-pdk15-stack-auto test-ucz180-resiy
 REGTESTTARGETS_2_1 = test-mcs51-small test-mcs51-huge test-mcs51-large-stack-auto test-s08 test-ucz180 test-ucz80n test-tlcs90 test-ucr2k test-ucr3ka test-stm8 test-ucz80-resiy test-pdk15
 
 DAYODD = $(shell date +%j | awk '{print $$0%2}')
