@@ -1,5 +1,11 @@
 2021-05-20 Philipp Klaus Krause <pkk AT spth.de>
 
+	* support/regression/Makefile.in,
+	  support/regression/ports/ucz180-resiy:
+	  Test z180 port with --reserve-regs-iy.
+
+2021-05-20 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/stm8/gen.c:
 	  Improvements for handling of literal values in wide registers: patch #388 by Visenri.
 
